--- a/style.css
+++ b/style.css
@@ -5,32 +5,43 @@
 }
 
 body {
+	font-size: 14px;		
 	background: #eee;
-	padding-top: 100px;
+	padding-top: 90px;
+	font-family: Arial, Helvetica, Sans-serif;
 }
 
 .navigation {
 	top: 0;
 	left: 0;
+	padding: 0 10%;
 	width: 100%;
-	height: 100px;
-	background: red;
 	position: fixed;
-	line-height: 100px;
+	color: #fff;
+	box-sizing: border-box;
+	background: #363636;
 	text-align: center;
 }
 .navigation a {
-	margin: 0 30px;
+	color: inherit;
+	margin: 35px 5px;
+	line-height: 150%;	
+	padding: 0 5px 0 20px;
 	display: inline-block;
 	text-decoration: none;
+	border-left: 1px solid #fff;
 } 
-
+.navigation a.active { color: yellow; }
+.navigation a:first-child { border: 0; }
 .box {
 	width: 100vw;
 	height: 100vh;
-	background: orange;
+	font-size: 14vw;
+	padding-top: 100px;
+	text-align: center;	
+	background: #4CD2DA;
 }
-.active {
-	color: yellow;
-}
-.box:nth-child(2) { background: green; }
+.box:nth-child(2) { background: #59DAE2; }
+.box:nth-child(3) { background: #4372A6; }
+.box:nth-child(4) { background: #D8E0E3; }
+.box:nth-child(5) { background: #4B565A; }
